plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'checkstyle'
    id 'org.sonarqube' version '7.2.2.6593'
    id 'org.owasp.dependencycheck' version '12.2.0'
    id 'com.github.ben-manes.versions' version '0.53.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.19'
}

group = 'es.altia'
version = '3.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

jacoco {
    toolVersion = "0.8.14"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // --- Spring Boot Starters ---
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // --- Security ---
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // --- Persistence ---
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    runtimeOnly 'org.postgresql:r2dbc-postgresql'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql:11.2.0'
    implementation 'com.google.guava:guava:33.2.1-jre'

    // --- JSON Schema Validation ---
    implementation 'com.networknt:json-schema-validator:1.5.6'

    // --- Serialization ---
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.1'
    implementation 'com.upokecenter:cbor:4.5.4'
    implementation 'org.apache.commons:commons-compress:1.26.2'
    implementation 'io.github.ehn-digital-green-development:base45:0.0.3'

    // --- Cryptography ---
    implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
    implementation 'com.nimbusds:oauth2-oidc-sdk:11.21.1'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
    implementation 'io.github.novacrypto:Base58:2022.01.17'

    // --- Email ---
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // --- QR Code Generation ---
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'

    // --- Documentation ---
    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'

    // --- Caching ---
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // --- Observability ---
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'io.micrometer:context-propagation'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'net.logstash.logback:logstash-logback-encoder:8.0'

    // --- DevTools ---
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.jetbrains:annotations:24.1.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // --- Testing ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'

    // --- Integration Testing ---
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
}

configurations.configureEach {
    exclude module: 'slf4j-simple'
}

// --- Quality & CI ---

checkstyle {
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source = 'src/test/java'
}

sonar {
    properties {
        property 'sonar.projectName', 'Altia EUDIStack Issuer Core Backend'
        property 'sonar.projectKey', 'in2workspace_altia-eudistack-issuer-core-backend'
        property 'sonar.organization', 'in2workspace'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.coverage.exclusions',
                "src/main/java/**/IssuerApiApplication.java, " +
                        "src/main/java/**/SecurityConfig.java, " +
                        "src/main/java/**/VerifierServiceImpl.java, " +
                        "src/main/java/**/InternalCORSConfig.java, " +
                        "src/main/java/**/PublicCORSConfig.java, " +
                        "src/main/java/**/TokenController.java"
    }
}

// --- Tasks ---

tasks.named('compileJava') {
    inputs.files(tasks.named('processResources'))
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required.set(true)
        csv.required.set(false)
        html.outputLocation.set(layout.buildDirectory.dir('jacocoHtml'))
    }
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
                "**/IssuerApiApplication.class",
                "**/enums/**",
                "**/Constants.class",
                "**/FlywayConfig.class",
                "**/SecurityConfig.class"
        ])
    }))
}

def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
    def regex = /^[0-9,.v-]+(-r)?$/
    return !stableKeyword && !(version ==~ regex)
}

tasks.named("dependencyUpdates").configure {
    rejectVersionIf {
        isNonStable(it.candidate.version)
    }
}
